login,signup pafe working sucessful 2.login and signup fuction by api using node workin sucessfully 3. note-i have used the axios package in react

--- a/src/component/signup/signUp.css
+++ b/src/component/signup/signUp.css
@@ -11,6 +11,8 @@
       height: 70%;
       max-width: 500px;
       max-height: 400px;
+      min-width: 200px;
+      min-height: 300px;
       display: flex;
       flex-direction: column;
       justify-content: center;
